--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "poc-ttads",
   "version": "1.0.0",
   "description": "ttadsPoc",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "test",
-    "dev": "nodemon index"
+    "dev": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,9 +12,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "http-errors": "^2.0.0",
+    "mongodb": "^4.11.0",
     "mongoose": "^6.6.5",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.20",
     "sequelize": "^6.25.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
