--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ttadsPoc",
   "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.js"
+    "dev": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
